“修复地图缩放位置偏移bug，修复移动位置锚点偏移bug”

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,12 +7,7 @@
     android:orientation="vertical"
     tools:context=".Activity.MapActivity">
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/tvR"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content" />-->
-
-    <xyz.taouvw.mysdutools.MyView.CircleView
+    <xyz.taouvw.mysdutools.MyView.PinView
         android:id="@+id/map2"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
