“修复地图定位bug”

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -25,14 +25,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/moreOption"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <TextView
+android:text="nihao"
         android:id="@+id/nowVersion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="122dp" />
 
 
 </LinearLayout>
