--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:background="#739AE1"
             android:id="@+id/tb"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -44,7 +45,6 @@
             <TableRow
                 android:id="@+id/Class"
                 android:paddingTop="2dp"
-
                 android:paddingBottom="2dp">
 
                 <xyz.taouvw.mysdutools.MyView.ShapeTextView
@@ -852,11 +852,13 @@
                 android:text="@string/app_name" />
         </FrameLayout>
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/OptionsList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:paddingLeft="20dp"
+            android:paddingTop="20dp"
+            android:paddingRight="20dp" />
     </LinearLayout>
 
 
