--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical"
     tools:context=".Activity.MapActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tbOfMap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#739AE1"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+        app:title="校区地图">
+
+
+    </androidx.appcompat.widget.Toolbar>
+
     <xyz.taouvw.mysdutools.MyView.PinView
         android:id="@+id/map2"
         android:layout_width="match_parent"
