--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:background="@color/white"
-                android:text="1-17周"
+                android:text="请选择周数"
                 android:textColor="@color/darkcyan" />
         </LinearLayout>
 
@@ -142,6 +142,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 </LinearLayout>
