--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -15,6 +15,13 @@
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
         app:title="校区地图">
 
+        <androidx.appcompat.widget.SearchView
+            app:queryHint="查找地图"
+            android:id="@+id/searchMap"
+            app:iconifiedByDefault="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end" />
 
     </androidx.appcompat.widget.Toolbar>
 
