--- a/app/src/main/res/drawable/occupiedroom_background.xml
+++ b/app/src/main/res/drawable/occupiedroom_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 设置框内填充颜色 -->
-    <solid android:color="#E13E0D" />
+    <solid android:color="#D3CF7459" />
     <!-- 设置边框宽度和颜色 -->
     <stroke
         android:width="1dip"
