“V1.35版本更新，暗黑模式适配，查询空教室自动跳转当前周”

--- a/app/src/main/res/drawable/grid_background.xml
+++ b/app/src/main/res/drawable/grid_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 设置框内填充颜色 -->
-    <solid android:color="#7CC5BA" />
+    <solid android:color="@color/choseweekbackgroundcolor" />
     <!-- 设置边框宽度和颜色 -->
     <stroke
         android:width="1dip"
