--- a/app/src/main/res/layout/eachclassroom.xml
+++ b/app/src/main/res/layout/eachclassroom.xml
@@ -19,15 +19,17 @@
                 android:layout_marginLeft="@dimen/kbMarginLeft"
                 android:layout_marginRight="@dimen/kbMarginRight"
                 android:layout_weight="5"
+                android:background="@color/allbackgroundcolor"
                 android:gravity="center_vertical"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:paddingLeft="2dp"
                 android:text="教室"
+                android:textColor="@color/WeeklistTextColor"
                 android:textSize="@dimen/room_text_size"
                 app:bottomLeftRadius="@dimen/BottomLeftRadius"
                 app:bottomRightRadius="@dimen/BottomRightRadius"
-                app:solidColor="@color/snow"
+                app:solidColor="@color/kbinfotextcolor"
                 app:topLeftRadius="@dimen/TopLeftRadius"
                 app:topRightRadius="@dimen/TopRightRadius" />
 
@@ -38,6 +40,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="第一节"
+                android:textColor="@color/WeeklistTextColor"
                 android:textSize="@dimen/kb_text_size"
                 app:bottomLeftRadius="@dimen/BottomLeftRadius"
                 app:bottomRightRadius="@dimen/BottomRightRadius"
@@ -52,6 +55,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="第二节"
+                android:textColor="@color/WeeklistTextColor"
                 android:textSize="@dimen/kb_text_size"
                 app:bottomLeftRadius="@dimen/BottomLeftRadius"
                 app:bottomRightRadius="@dimen/BottomRightRadius"
@@ -66,6 +70,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="第三节"
+                android:textColor="@color/WeeklistTextColor"
                 android:textSize="@dimen/kb_text_size"
                 app:bottomLeftRadius="@dimen/BottomLeftRadius"
                 app:bottomRightRadius="@dimen/BottomRightRadius"
@@ -80,6 +85,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="第四节"
+                android:textColor="@color/WeeklistTextColor"
                 android:textSize="@dimen/kb_text_size"
                 app:bottomLeftRadius="@dimen/BottomLeftRadius"
                 app:bottomRightRadius="@dimen/BottomRightRadius"
@@ -94,6 +100,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="第五节"
+                android:textColor="@color/WeeklistTextColor"
                 android:textSize="@dimen/kb_text_size"
                 app:bottomLeftRadius="@dimen/BottomLeftRadius"
                 app:bottomRightRadius="@dimen/BottomRightRadius"
