--- a/app/src/main/res/drawable/choseeweek.xml
+++ b/app/src/main/res/drawable/choseeweek.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 设置框内填充颜色 -->
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/choseweekdialogbackgroundcolor" />
     <!-- 设置边框宽度和颜色 -->
     <stroke
         android:width="2dip"
