--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/allbackgroundcolor"
     android:orientation="vertical"
     tools:context=".Activity.AboutActivity">
 
@@ -20,21 +20,23 @@
         android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:text="MySduTools"
+        android:textColor="@color/optionTextColor"
         android:textSize="18sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/moreOption"
+        android:background="@color/allbackgroundcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-android:text="nihao"
         android:id="@+id/nowVersion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginLeft="122dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="122dp" />
+        android:text="nihao" />
 
 
 </LinearLayout>
