--- a/app/src/main/res/layout/option_list.xml
+++ b/app/src/main/res/layout/option_list.xml
@@ -16,5 +16,6 @@
         android:id="@+id/option"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp" />
+        android:paddingLeft="10dp"
+        android:textColor="@color/WeeklistTextColor" />
 </LinearLayout>
