--- a/app/src/main/res/layout/pickweek.xml
+++ b/app/src/main/res/layout/pickweek.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/allbackgroundcolor"
     android:orientation="vertical">
 
 
@@ -19,9 +20,9 @@
                 android:layout_height="40dp"
 
                 android:layout_weight="1"
-                android:background="@color/darkseagreen"
+                android:background="@color/choseweekbackgroundcolor"
                 android:text="选择单周"
-                android:textColor="@color/white"
+                android:textColor="@color/optionTextColor"
                 android:textSize="12sp" />
 
             <androidx.appcompat.widget.AppCompatButton
