--- a/app/src/main/res/layout/week_list.xml
+++ b/app/src/main/res/layout/week_list.xml
@@ -12,13 +12,14 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
+        android:background="@color/allbackgroundcolor"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/WeeklistTextColor"
         app:bottomLeftRadius="@dimen/BottomLeftRadius"
         app:bottomRightRadius="@dimen/BottomRightRadius"
-
         app:topLeftRadius="@dimen/TopLeftRadius"
         app:topRightRadius="@dimen/TopRightRadius" />
 </LinearLayout>
