--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -150,5 +150,20 @@
     <color name="mediumblue">#0000cd</color> <!-- 中兰色 -->
     <color name="darkblue">#00008b</color> <!-- 暗蓝色 -->
     <color name="navy">#000080</color> <!-- 海军色 -->
-    <color name="black">#000000</color> <!-- 黑色 -->
+    <color name="black">#000000</color>
+
+
+    <color name="toolbartextcolor">#000000</color>
+    <color name="toolbarcolor">#739AE1</color>
+    <color name="optionTextColor">#ffffff</color>
+    <color name="kbColor">#ffffff</color>
+    <color name="allbackgroundcolor">#ffffff</color>
+    <color name="choseweekbackgroundcolor">#8fbc8f</color>
+    <color name="WeeklistTextColor">#000000</color>
+    <color name="addclassdialog">#7CC5BA</color>
+    <color name="addclasshinttextcolor">#2C2B2B</color>
+    <color name="choseweekdialogbackgroundcolor">#ffffff</color>
+    <color name="kbgridtextcolor">#000000</color>
+
+    <color name="kbinfotextcolor">#fffafa</color>
 </resources>
