--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="toolbartextcolor">#ffffff</color>
-    <color name="toolbarcolor">#000000</color>
-    <color name="optionTextColor">#000000</color>
-    <color name="kbColor">#000000</color>
-    <color name="allbackgroundcolor">#000000</color>
-    <color name="WeeklistTextColor">#ffffff</color>
-    <color name="addclassdialog">#000000</color>
+    <color name="toolbartextcolor">#F1EBEB</color>
+    <color name="toolbarcolor">#171616</color>
+    <color name="optionTextColor">#191818</color>
+    <color name="kbColor">#151515</color>
+    <color name="allbackgroundcolor">#1C1C1C</color>
+    <color name="WeeklistTextColor">#F1EAEA</color>
+    <color name="addclassdialog">#191818</color>
     <color name="addclasshinttextcolor">#ffffff</color>
     <color name="choseweekdialogbackgroundcolor">#352C2C</color>
-    <color name="kbgridtextcolor">#ffffff</color>
+    <color name="kbgridtextcolor">#EAE4E4</color>
     <color name="choseweekbackgroundcolor">#223022</color>
-    <color name="kbinfotextcolor">#000000</color>
-    <color name="day_black_night_white">#ffffff</color>
-    <color name="day_white_night_black">#000000</color>
+    <color name="kbinfotextcolor">#171616</color>
+    <color name="day_black_night_white">#E8E0E0</color>
+    <color name="day_white_night_black">#131313</color>
+    <color name="btn_cancel">#575757</color>
+    <color name="btn_confirm">#A56060</color>
+    <color name="header_dialog">#96BCE3</color>
+    <color name="color_list_1">#B5B8BC</color>
+    <color name="solid_color_list_1">#7C756D</color>
+    <color name="color_list_2">#ABD6AB</color>
+    <color name="solid_color_list_2">#DD604059</color>
+    <color name="color_list_3">#f5f5dc</color>
+    <color name="solid_list_3">#526C52</color>
+    <color name="color_list_4">#f0f8ff</color>
+    <color name="solid_color_list_4">#297159</color>
+    <color name="color_list_5">#f0f8ff</color>
+    <color name="solid_color_list_5">#295665</color>
+    <color name="color_list_6">#f0f8ff</color>
+    <color name="solid_color_list_6">#39306A</color>
+    <color name="color_list_7">#f0f8ff</color>
+    <color name="solid_color_list_7">#63487A</color>
+    <color name="color_list_8">#f0f8ff</color>
+    <color name="solid_color_list_8">#7A5035</color>
+    <color name="ddl_header_color">#817F59</color>
 </resources>
