--- a/app/src/main/res/drawable/text_underline.xml
+++ b/app/src/main/res/drawable/text_underline.xml
@@ -7,7 +7,7 @@
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="@color/day_black_night_white" />
+                android:color="#151414" />
         </shape>
     </item>
 </layer-list>
