--- a/app/src/main/res/drawable/ddl_list_1.xml
+++ b/app/src/main/res/drawable/ddl_list_1.xml
@@ -10,6 +10,6 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_list_1" />
-    <solid android:color="@color/solid_color_list_1" />
+    <solid android:color="#F1F8E9" />
 
 </shape>
