--- a/app/src/main/res/drawable/ddl_list_2.xml
+++ b/app/src/main/res/drawable/ddl_list_2.xml
@@ -10,5 +10,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_list_2" />
-    <solid android:color="@color/solid_color_list_2" />
+    <solid android:color="#E0F2F1" />
 </shape>
