--- a/app/src/main/res/drawable/ddl_list_3.xml
+++ b/app/src/main/res/drawable/ddl_list_3.xml
@@ -10,5 +10,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_list_3" />
-    <solid android:color="@color/solid_list_3" />
+    <solid android:color="#E0F7FA" />
 </shape>
