--- a/app/src/main/res/drawable/ddl_list_4.xml
+++ b/app/src/main/res/drawable/ddl_list_4.xml
@@ -11,5 +11,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_list_4" />
-    <solid android:color="@color/solid_color_list_4" />
+    <solid android:color="#FFEBEE" />
 </shape>
