--- a/app/src/main/res/drawable/ddl_list_6.xml
+++ b/app/src/main/res/drawable/ddl_list_6.xml
@@ -11,5 +11,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_list_6" />
-    <solid android:color="@color/solid_color_list_6" />
+    <solid android:color="#B3E5FC" />
 </shape>
