--- a/app/src/main/res/drawable/ddl_list_7.xml
+++ b/app/src/main/res/drawable/ddl_list_7.xml
@@ -11,5 +11,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_list_7" />
-    <solid android:color="@color/solid_color_list_7" />
+    <solid android:color="#E4FFCDD2" />
 </shape>
