--- a/app/src/main/res/drawable/img_underline.xml
+++ b/app/src/main/res/drawable/img_underline.xml
@@ -6,8 +6,8 @@
         android:top="-2dp">
         <shape>
             <stroke
-                android:width="1dp"
-                android:color="#DF151414" />
+                android:width="2dp"
+                android:color="#E0F2F1" />
         </shape>
     </item>
 </layer-list>
