--- a/app/src/main/res/drawable/week_btn.xml
+++ b/app/src/main/res/drawable/week_btn.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="5dp" />
-
     <stroke
         android:width="1dp"
-        android:color="#BBDEFB" />
+        android:color="@color/toolbarcolor" />
+
+    <solid android:color="@color/toolbarcolor" />
+    <corners android:radius="5dp" />
 </shape>
