--- a/app/src/main/res/drawable/week_btn_text_underline.xml
+++ b/app/src/main/res/drawable/week_btn_text_underline.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+
+        android:bottom="10dp"
         android:left="-2dp"
         android:right="-2dp"
         android:top="-2dp">
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="#DF151414" />
+                android:color="#E8F5E9" />
         </shape>
     </item>
 </layer-list>
