--- a/app/src/main/res/layout/each_ddl_recycle_layout.xml
+++ b/app/src/main/res/layout/each_ddl_recycle_layout.xml
@@ -40,7 +40,9 @@
                     android:minHeight="30dp"
                     android:paddingLeft="10dp"
                     android:text="计算机第二次作业"
-                    android:textSize="15sp" />
+                    android:textColor="#000000"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
 
                 <TextView
@@ -52,7 +54,7 @@
                     android:paddingLeft="10dp"
                     android:text="desc"
 
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -63,7 +65,7 @@
 
                 android:background="@drawable/ddl_time_background">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/ddl_time"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
@@ -71,6 +73,10 @@
                     android:lineHeight="40dp"
                     android:maxWidth="80dp"
                     android:minWidth="80dp"
+                    android:shadowColor="@color/black_text_shadow_color"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="5"
                     android:text="08.10\n12:00"
                     android:textSize="20sp" />
             </LinearLayout>
