--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -34,4 +34,5 @@
     <color name="color_list_8">#f0f8ff</color>
     <color name="solid_color_list_8">#7A5035</color>
     <color name="ddl_header_color">#817F59</color>
+    <color name="black_text_shadow_color">#505350</color>
 </resources>
